# NX-Samples

./: CMakeLists.txt  README.md
camera/: CMakeLists.txt  glcamera.cpp
camera/data/: camera.prog
camera/data/models/: sphere.nx3d  sphere_interleaved.nx3d
camera/data/shaders/: camera_quat.frag.glsl
common/: CMakeLists.txt  gltutapp.cpp  gltutapp.h
fonts/: CMakeLists.txt
fonts/data/: font.prog
fonts/data/shaders/: font.frag.glsl  font.vert.glsl
fonts/src/: main.cpp
shadows/: CMakeLists.txt
shadows/data/: shadow-camera.prog  shadow-light-view.prog  shadow-light.prog
shadows/data/models/: sphere.nx3d
shadows/data/shaders/: shadow-camera.frag.glsl  shadow-camera.vert.glsl  shadow-light-view.frag.glsl  shadow-light-view.vert.glsl  shadow-light.frag.glsl  shadow-light.vert.glsl
shadows/src/: main.cpp
triangle/: CMakeLists.txt  triangle.cpp
triangle/data/: triangle.prog
